# kaufland_scraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  google_config.py  image_downloader.py  main.py  pyproject.toml  scraper.py  uploader.py  utils.py
src/: image_extractor_client.py  main.py  notifier_client.py  scraper.py
